<resources>
    <string name="app_name">RK3568 HdmiIn</string>
    <string name="mute">Mute</string>
    <string name="select_location">Display position:</string>
    <string name="choose_size">Window size:</string>
    <string name="pip">PIP</string>
    <string name="take_picture">Take picture</string>
    <string name="err_permission">Permission Error</string>
    <string name="no_signal">No Signal</string>
</resources>